# celery-sandbox

./: CHANGELOG.md  Pipfile  README.md  pyproject.toml
celery_sandbox/: __init__.py  retries.py  test_retries.py
